# Deploy-LangChain

./: .dockerignore  .gitignore  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: main.yml
src/: main.py  rag_service.py  ui_interface.py
src/deploy_langchain/: __init__.py  main_pdf_rag_faiss.py
